# api_currency

./: Cargo.toml  README.md  testing_db.db
migrations/2023-12-02-094805_exchanges_rates/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs
